clientside/ui/chat.css
@font-face {
	font-family: fira-code;
	src: url(fira_Code);
}

html, body {
	display: flex;
	flex: 1;
	flex-direction: column;
	height: 100%;
	width: 100%;
	font-family: fira-code;
}

.logs {
	flex: 100;
	overflow: hidden;
	vertical-align: bottom;
}

#log-container {
	flex: 1;
	height: 90%;
	align-content: flex-end;
	color: white;
}

#input-container {
	height: 10%;
	width: 100%;
}

p {
	color: white;
}

.temp-chat-div {
	color: white;
}

.msg-cont {
	display: flex;
	flex: 1;
	flex-direction: row;
	font-family: fira-code;
}

